--- a/core/templates/core/events/edit.html
+++ b/core/templates/core/events/edit.html
@@ -1,13 +1,14 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <h1>Add Event</h1>
+    <h1>Edit Event</h1>
     
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Add Event</button>
+        <button type="submit" class="btn btn-success">Update Event</button>
     </form>
 
     <a href="{% url 'list_events' %}" class="btn btn-secondary">Back</a>
 {% endblock %}
+
