--- a/core/templates/core/events/list.html
+++ b/core/templates/core/events/list.html
@@ -1,37 +1,44 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <h1>Events List</h1>
-    
-    <a href="{% url 'add_event' %}">Add New Event</a>
-    
-    {% if events %}
-        <table>
-            <thead>
+    <h1>Events</h1>
+    <a href="{% url 'add_event' %}" class="btn btn-primary">Add New Event</a>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Event Name</th>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Venue</th>
+                <th>Organizer</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for event in events %}
                 <tr>
-                    <th>Event Name</th>
-                    <th>Event Date</th>
-                    <th>Event Time</th>
-                    <th>Venue</th>
-                    <th>Actions</th>
+                    <td>{{ event.event_name }}</td>
+                    <td>{{ event.event_date }}</td>
+                    <td>{{ event.event_time }}</td>
+                    <td>{{ event.event_venue }}</td>
+                    <td>{{ event.organizer.first_name }} {{ event.organizer.last_name }}</td>
+                    <td>
+                        <a href="{% url 'update_event' event.event_id %}" class="btn btn-warning btn-sm">Edit</a>
+                        <a href="{% url 'delete_event' event.event_id %}" 
+                        onclick="return confirmDelete(event)">Delete</a>
+                         </td>
                 </tr>
-            </thead>
-            <tbody>
-                {% for event in events %}
-                    <tr>
-                        <td>{{ event.event_name }}</td>
-                        <td>{{ event.event_date }}</td>
-                        <td>{{ event.event_time }}</td>
-                        <td>{{ event.event_venue }}</td>
-                        <td>
-                            <a href="{% url 'update_event' event.event_id %}">Edit</a> |
-                            <a href="{% url 'delete_event' event.event_id %}">Delete</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>No events available.</p>
-    {% endif %}
+            {% empty %}
+                <tr><td colspan="6">No events found.</td></tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <script>
+        function confirmDelete(event) {
+            var result = confirm("Are you sure you want to delete this event?");
+            if (!result) {
+                event.preventDefault();  // Stop the deletion if the user clicks "Cancel"
+            }
+        }
+        </script>
 {% endblock %}
